--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,11 @@
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.11</version>
+             <configuration>
+                <skipTests>false</skipTests>
+                <testFailureIgnore>true</testFailureIgnore>
+                <forkMode>once</forkMode>
+            </configuration>
         </plugin>
 
         <plugin>
